[package]
name = "whispr"
version = "0.1.0"
description = "Created with Arcium & Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whispr"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"

arcium-client = { default-features = false, version = "0.2.0" }
arcium-macros = "0.2.0"
arcium-anchor = "0.2.0"

constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git"}
